# rambot

./: Cargo.toml
src/: buf_messenger.rs  command.rs  db.rs  error.rs  main.rs  telegram.rs  transcriber.rs  utils.rs
src/transcriber/: mod.rs  state_machine.rs
